--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
       - /:/rootfs:ro
     ports:
       - "127.0.0.1:9100:9100"
+    networks:
+      - app-network
 
   # Prometheus
   prometheus:
@@ -48,6 +50,8 @@ services:
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
+    networks:
+      - app-network
 
   # Grafana
   grafana:
@@ -58,6 +62,8 @@ services:
       - "127.0.0.1:3001:3000"
     volumes:
       - grafana_data:/var/lib/grafana
+    networks:
+      - app-network
 
 volumes:
   prometheus_data:
