--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -16,5 +16,9 @@
   "devDependencies": {
     "jest": "^30.2.0",
     "supertest": "^7.1.4"
+  },
+  "overrides": {
+    "glob": "^10.0.0",
+    "inflight": "^2.0.0"
   }
 }
